--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -13,7 +13,6 @@ db.source.multiOther=APP:localdev
 hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.jdbc.batch_size=50
-
 # Please use absolute path. 
 # Here is relative for TestUnit.
 
@@ -140,5 +139,8 @@ online.export.max=5000
 mongodb.userName =mongo
 mongodb.password =abc123
 mongodb.host1 =10.16.31.216:27017
-mongodb.host2 =10.16.31.216:27027
-mongodb.host3 =10.16.31.216:27037
+#mongodb.host2 =10.16.31.216:27027
+#mongodb.host3 =10.16.31.216:27037
+
+iproxy.sendip=10.0.1.11
+iproxy.sendport=3128
