--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -34,6 +34,9 @@ hibernate.jdbc.batch_size=50
 file.root=/usr/local/tomcat7/webapps/file_manager/
 file.web.root=http://10.16.31.242/file_manager/
 
+#file.root=/usr/local/tomcat/webapps/file_manager/
+#file.web.root=http://demo.guoanshuju.com/file_manager/
+
 
 #file.root=/usr/local/apache-tomcat-8.0.15/webapps/daqApp/file/
 
