添加代理设置开关功能。配置文件配置是否启用代理

--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -28,11 +28,11 @@ hibernate.jdbc.batch_size=50
 #file.web.root=https://datatest.guoanshequ.top/file_manager/
 
 
-#file.root=D:/jeeworkspacedaq/.metadata/.plugins/org.eclipse.wst.server.core/tmp1/wtpwebapps/file_manager/
-#file.web.root=http://localhost:8888/file_manager/
+file.root=D:/jeeworkspacedaq/.metadata/.plugins/org.eclipse.wst.server.core/tmp1/wtpwebapps/file_manager/
+file.web.root=http://localhost:8888/file_manager/
 
-file.root=/usr/local/tomcat7/webapps/file_manager/
-file.web.root=http://10.16.31.242/file_manager/
+#file.root=/usr/local/tomcat7/webapps/file_manager/
+#file.web.root=http://10.16.31.242/file_manager/
 
 #file.root=/usr/local/tomcat/webapps/file_manager/
 #file.web.root=http://demo.guoanshuju.com/file_manager/
@@ -54,6 +54,7 @@ wx.appid=wxcdd8ef7d3ae06c50
 wx.secret=933f595576275a25a51448955ae56c1a
 wx.grant_type=authorization_code
 
+iproxy.set=OFF
 iproxy.sendip=10.0.1.11
 iproxy.sendport=3128
 
