短信回复IP白名单，impala的url

--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -152,3 +152,10 @@ mongodb.host1 =10.16.31.216:27017
 
 iproxy.sendip=10.0.1.11
 iproxy.sendport=3128
+
+permitAddress=10.16.31.70
+
+impala_host=10.16.31.192
+impala_port=21050
+impala_user=
+impala_password=
