--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -126,3 +126,4 @@ mongodb.password =zxgasq2018341
 mongodb.host1 =115.182.249.132:27017
 #mongodb.host2 =10.0.6.12:27017
 #mongodb.host3 =10.0.6.13:27017
+permitAddress=10.16.31.70
