impala参数配置（非正式，不影响正常发版），公告附件文件上传oss（已注释，不影响正常发版）

--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -378,4 +378,13 @@
     <servlet-name>reciveMessageReply</servlet-name>
     <url-pattern>/replyMessage.action</url-pattern>
   </servlet-mapping>
+  <!--上传文件到oss-->
+  <servlet>
+    <servlet-name>uploadFileToOss</servlet-name>
+    <servlet-class>com.cnpc.pms.upload.action.UploadFileToOssAction</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>uploadFileToOss</servlet-name>
+    <url-pattern>/uploadFileToOss.action</url-pattern>
+  </servlet-mapping>
 </web-app>
