--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -129,3 +129,8 @@ mongodb.host1 =115.182.249.132:27017
 permitAddress=219.159.20.64,124.65.98.198,10.16.31.125,219.159.20.83,10.16.31.70,114.255.71.158
 
 replyMessageFilePath=/data/replyMessgeHistory/
+#hadoop
+impala_host=10.30.0.14
+impala_port=21050
+impala_user=
+impala_password=
