--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -161,3 +161,5 @@ impala_port=21050
 impala_user=
 impala_password=
 replyMessageFilePath=/data/replyMessgeHistory/
+
+scheduler_server_ip=10.16.31.26,10.16.31.242
