修改发布环境配置文件,添加路径配置

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -26,6 +26,8 @@ hibernate.jdbc.batch_size=50
 #file.root=/usr/local/apache-tomcat-8.0.15/webapps/daqApp/file/
 file.root=/data/images/file_manager/
 file.web.root=https://imagedata.guoanshequ.com/file_manager/
+file.oss.root=https://cdn.guoanshuju.com/daqWeb/
+
 #/usr/local/server/eldercare/webapps/elder_care/
 #/usr/local/daqApp/webapps/daqApp/file
 #shengchanhuanjing
@@ -135,5 +137,4 @@ impala_port=21050
 impala_user=
 impala_password=
 
-#用于执行员工配送里程定时任务
 scheduler_server_ip=10.20.0.11
