--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -31,7 +31,7 @@ hibernate.jdbc.batch_size=50
 #file.root=D:/jeeworkspacedaq/.metadata/.plugins/org.eclipse.wst.server.core/tmp1/wtpwebapps/file_manager/
 #file.web.root=http://localhost:8888/file_manager/
 
-file.root=E:/eclipse_neon_workspace/file_manager/
+file.root=/usr/local/tomcat7/webapps/file_manager/
 file.web.root=http://10.16.31.242/file_manager/
 file.oss.root=https://cdn.guoanshuju.com/daqWeb/
 
