修改数据系统访问门店系统的接口访问方式

--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -38,6 +38,7 @@ file.oss.root=https://cdn.guoanshuju.com/daqWeb/
 #file.root=/usr/local/tomcat/webapps/file_manager/
 #file.web.root=http://demo.guoanshuju.com/file_manager/
 
+vacation.interface=http://10.16.31.242:8888/GASM/dispatcher.action
 
 #file.root=/usr/local/apache-tomcat-8.0.15/webapps/daqApp/file/
 
