--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -28,6 +28,9 @@ file.root=/data/images/file_manager/
 file.web.root=https://imagedata.guoanshequ.com/file_manager/
 file.oss.root=https://cdn.guoanshuju.com/daqWeb/
 
+
+vacation.interface=https://data.guoanshequ.com/daqWeb/dispatcher.action
+
 #/usr/local/server/eldercare/webapps/elder_care/
 #/usr/local/daqApp/webapps/daqApp/file
 #shengchanhuanjing
