删除代理访问

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -44,7 +44,7 @@ wx.appid=wxcdd8ef7d3ae06c50
 wx.secret=933f595576275a25a51448955ae56c1a
 wx.grant_type=authorization_code
 
-iproxy.set=ON
+iproxy.set=OFF
 iproxy.sendip=10.0.1.11
 iproxy.sendport=3128
 
