--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -126,11 +126,11 @@ online.export.max=5000
 
 
 #mongodb
-mongodb.userName =gemini
-mongodb.password =zxgasq2018@!341%^
-mongodb.host1 =cl01-mongo01.guoanshequ.com:27017
-mongodb.host2 =cl01-mongo02.guoanshequ.com:27017
-mongodb.host3 =cl01-mongo03.guoanshequ.com:27017
+mongodb.userName=gemini
+mongodb.password=zxgasq2018@!341%^
+mongodb.host1=10.10.20.7:27017
+mongodb.host2=10.10.20.8:27017
+mongodb.host3=10.10.20.9:27017
 permitAddress=219.159.20.64,124.65.98.198,10.16.31.125,219.159.20.83,10.16.31.70,114.255.71.158
 
 replyMessageFilePath=/data/replyMessgeHistory/
