修改访问门店系统的接口域名，删除日志天数限制

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -29,7 +29,7 @@ file.web.root=https://imagedata.guoanshequ.com/file_manager/
 file.oss.root=https://cdn.guoanshuju.com/daqWeb/
 
 
-vacation.interface=https://data.guoanshequ.com/daqWeb/dispatcher.action
+vacation.interface=https://store.guoanshuju.com/GASM/dispatcher.action
 
 #/usr/local/server/eldercare/webapps/elder_care/
 #/usr/local/daqApp/webapps/daqApp/file
