新增用户整体分析概览

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -141,3 +141,9 @@ impala_user=
 impala_password=
 
 scheduler_server_ip=10.20.0.11
+
+#Guoan Impala
+impala_guoan_host=10.10.40.9
+impala_guoan_port=21051
+impala_guoan_user=
+impala_guoan_password=
