短信代理、oss代理

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -147,3 +147,7 @@ impala_guoan_host=10.10.40.9
 impala_guoan_port=21051
 impala_guoan_user=
 impala_guoan_password=
+
+#http proxy
+proxy.domain= proxy.guoanshequ.top
+proxy.port=3128
