--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -148,6 +148,10 @@ impala_guoan_port=21051
 impala_guoan_user=
 impala_guoan_password=
 
-#http proxy
-proxy.domain= proxy.guoanshequ.top
+##http proxy 预生产
+#proxy.domain= proxy.guoanshequ.top
+#proxy.port=3128
+
+#http proxy 正式
+proxy.domain= proxy.guoanshequ.com
 proxy.port=3128
