--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -149,9 +149,9 @@ impala_guoan_user=
 impala_guoan_password=
 
 ##http proxy 预生产
-#proxy.domain= proxy.guoanshequ.top
-#proxy.port=3128
+proxy.domain= proxy.guoanshequ.top
+proxy.port=3128
 
 #http proxy 正式
-proxy.domain= proxy.guoanshequ.com
-proxy.port=3128
+#proxy.domain= proxy.guoanshequ.top
+#proxy.port=3128
