--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -151,6 +151,7 @@ impala_guoan_password=
 ##http proxy 预生产、正式
 proxy.domain= proxy.guoanshequ.com
 proxy.port=3128
+proxy.switch=on
 
 #http proxy
 #proxy.domain= proxy.guoanshequ.top
