添加给事业群负责人发短链接信息功能

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -147,3 +147,6 @@ impala_guoan_host=10.10.40.9
 impala_guoan_port=21051
 impala_guoan_user=
 impala_guoan_password=
+
+
+web.url=https://www.guoanshuju.com
