添加同步sso人员及门店、修改预警消息页面

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -29,7 +29,7 @@ file.web.root=https://imagedata.guoanshequ.com/file_manager/
 file.oss.root=https://cdn.guoanshuju.com/daqWeb/
 
 
-vacation.interface=https://store.guoanshuju.com/GASM/dispatcher.action
+vacation.interface=https://storejs.guoanshuju.com/GASM/dispatcher.action
 
 #/usr/local/server/eldercare/webapps/elder_care/
 #/usr/local/daqApp/webapps/daqApp/file
@@ -158,3 +158,6 @@ proxy.switch=on
 #http proxy
 #proxy.domain= proxy.guoanshequ.top
 #proxy.port=3128
+
+sso.user.saveorupdate=https://login-infojs.guoanshuju.com
+
