--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -176,3 +176,6 @@ web.url=http://10.16.21.63
 proxy.domain= 10.16.90.158
 proxy.port=3128
 proxy.switch=off
+
+
+sso.user.saveorupdate=http://123.56.204.170:9999
