修改同步线上员工及门店的URL

--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -37,8 +37,8 @@ vacation.interface=https://storejs.guoanshuju.com/GASM/dispatcher.action
 #file.root = /usr/local/server/daqApp/Webapps/daqApp/file
 
 platform.key=7f0ad420-bed8-490b-b71f-5c1535d05ee0
-platform.store=https://gasq-web-thirdparty.guoanshequ.com/gasq-web-thirdparty/storeSynchro/store
-platform.employee=https://gasq-web-thirdparty.guoanshequ.com/gasq-web-thirdparty/storeSynchro/employee
+platform.store=https://gasq-web-thirdpartyjs.guoanshequ.com/gasq-web-thirdparty/storeSynchro/store
+platform.employee=https://gasq-web-thirdpartyjs.guoanshequ.com/gasq-web-thirdparty/storeSynchro/employee
 
 wx.appid=wxcdd8ef7d3ae06c50
 wx.secret=933f595576275a25a51448955ae56c1a
