更改impala用户名密码为daqweb

--- a/src/conf/application.properties
+++ b/src/conf/application.properties
@@ -159,8 +159,8 @@ permitAddress=219.159.20.64,124.65.98.198,10.16.31.125,219.159.20.83,10.16.31.92
 
 impala_host=10.10.40.9
 impala_port=21051
-impala_user=
-impala_password=
+impala_user=daqweb
+impala_password=daqweb
 replyMessageFilePath=/data/replyMessgeHistory/
 
 scheduler_server_ip=10.16.31.77,10.16.31.242,10.16.31.111
@@ -168,8 +168,8 @@ scheduler_server_ip=10.16.31.77,10.16.31.242,10.16.31.111
 #Guoan Impala
 impala_guoan_host=10.10.40.9
 impala_guoan_port=21051
-impala_guoan_user=
-impala_guoan_password=
+impala_guoan_user=daqweb
+impala_guoan_password=daqweb
 
 web.url=http://10.16.21.63
 #http proxy
