--- a/src/conf/application-product.properties
+++ b/src/conf/application-product.properties
@@ -137,16 +137,16 @@ replyMessageFilePath=/data/replyMessgeHistory/
 #hadoop
 impala_host=10.10.40.4
 impala_port=21051
-impala_user=
-impala_password=
+impala_user=daqweb
+impala_password=daqweb
 
 scheduler_server_ip=10.20.0.11
 
 #Guoan Impala
 impala_guoan_host=10.10.40.9
 impala_guoan_port=21051
-impala_guoan_user=
-impala_guoan_password=
+impala_guoan_user=daqweb
+impala_guoan_password=daqweb
 
 
 web.url=https://www.guoanshuju.com
